# HammyFit

./: .gitignore  LICENSE  Make_A_Workout.py  README.md  auth.py  context.py  load_dataset.py  out.txt  process_frame.py  pyproject.toml  query.py  requirements.txt  run.py  setPage.py  test.py
app/: Make_A_Workout.py
app/.streamlit/: config.toml
app/helpers/: RAG.py  audio_recognizer.py  exerciseapi.py  setPage.py
app/helpers/baml_src/: generators.baml
app/helpers/baml_src/baml_client/: inlinedbaml.py  types.py
app/helpers/squats/: process_frame.py  thresholds.py  utils.py
app/pages/: 2_Exercise_Plan.py  4_Chat_With_Hammy.py  Form_Correcter.py  Push_Form.py
baml_src/: exer.baml  resume.baml
baml_src/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py
pages/: 2_Exercise_Plan.py  4_Chat_With_Hammy.py  Form_Correcter.py  Push_Form.py
tests/: RAG_test.py
